2000-07-31  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* transports/smtp/smtp.c:
	    When 'NOTIFY=TRACE' flag is present, don't send it out
	    as it is our INTERNAL thing.  Thus the change from string
	    based output to flag-based output routine.

	* include/ta.h, include/mailer.h, include/libz.h:
	    Moved  STREQ()/STREQN()/CISTREQ()/CISTREQN()  macroes
	    from  mailer.h (and ta.h)  to libz.h.

	* utils/md5sum.c:
	    Completed  usage()  function, and some comments.

	* compat/sendmail/sendmail.c:
	    Added acceptance for our internal  -N TRACE flag, which
	    is for eased debugging of RFC 2852 features.

2000-07-30  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* libident/identuser.c:
	    A buglet in read loop.  The 'break' affects only
	    the innermost loop construct, and it needed to go
	    out the outer too..  Nuisance think, I would say.
	    (And usage of indent is questionable anyway..)

	* smtpserver/smtpserver.h, smtpserver/smtpcmds.c,
	  smtpserver/cfgread.c, smtpserver/smtpserver.c,
	  include/ta.h, transports/libta/ctlopen.c:
	    Initial hooks for RFC 2852.

	* transports/libta/diagnostic.c:
	    Turn on, temporarily, O_APPEND flag on the file.

	* scheduler/msgerror.c:
	    Missed variable inits, and malformed format statement.

	* transports/smtp/getmxrr.c:
	    dnscache by djb produces replies which don't have NS or AD
	    sections, and when scanning replies, we had one-off comparison
	    error which bailed out in case the ANSWER section reached
	    the end of the reply packet.

	* man/scheduler.8:
	    Updating on data formats and communication protocols.

	* transports/libta/lockaddr.c:
	    Be carefull as *not* to overwrite part of diagnostic
	    data with spaces.  This has never been a bug, except
	    that trying to understand some aspects of the system
	    while updating documents revealed that we do unnecessary
	    scrubbing there.

2000-07-29  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>
